# python_slutuppgift

./: .gitignore  alarm.py  manager.py  monitor.py  pyproject.toml
02_python_slutuppgift/: alarm.py  manager.py  monitor.py
